# harvester-sdk

./: .gitignore  FORENSIC_TIMELINE.md  INSTALL.md  LICENSE  MANIFEST.in  OPENAI_SECURITY_INCIDENT_REPORT.md  PKG-INFO  README.md  SECURITY.md  TESTING_TRACKER.md  __init__.py  harvester.py  parallel_template_cli.py  pyproject.toml  requirements.txt  setup.py  setup.sh  test_json_simple.csv  test_prompts.csv  test_prompts.json  test_prompts.txt  test_prompts_from_json.csv  test_prompts_simple.json  version.py
agents/: README_SAFE_EXEC.md  __init__.py  claude_code_agent.py  grok_code_agent.py  guardrails.py  litellm_support.py  mcp.py  openai_agent.py  openai_models.py  orchestration.py  safe_open.c  schemas.py  security_monitor.py  sqlalchemy_session.py  streaming.py  test_injection_fuzzing.py
cli/batch/: batch_status.py  batch_submit.py  extract_batch_results.py  extract_gpt5_batch.py  prepare_knowledge_batch.py
cli/chat/: ai_assistant.py  claude_chat.py  deepseek_chat.py  gemini_chat.py  gpt_computer_use.py  grok_chat.py  grok_search.py  openai_chat.py
cli/image/: image_cli.py  linear_vertex_image.py
cli/processing/: conductor.py  converter.py  csv_processor.py  json_processor.py
config/: google_cloud_setup.yaml  harvest_profiles.yaml  providers.yaml  rqp_presets.yaml  templates.yaml
config/legacy-config/: providers.yaml
config/providers/: genai_embeddings.yaml  genai_imagen.yaml  genai_lyria.yaml  genai_veo3.yaml
core/: __init__.py  batch_processor.py  collector.py  csv_scanner.py  document_loader.py  function_calling.py  json_template_processor.py  post_processor.py  result_templater.py  rqp_templater.py  scanner.py  structured_output.py  synthesizer.py  template_adapter.py  templater.py
docs/: CHAT_GUIDE.md  CLI_REFERENCE.md  DEEPSEEK_GUIDE.md  GPT_COMPUTER_USE_SETUP.md  GROK_CODE_AGENT.md  IMAGE_GENERATION.md  README.md  TEMPLATE_LIBRARY.md  XAI_RESPONSES_API.md
docs/quickstart/: IMAGE_QUICKSTART.md  README.md  TEMPLATE_QUICKSTART.md
example/: batch_results_20251003_232841.json  batch_results_20251003_234016.json  mojo_structured.json
example/agent-claude/: math_helpers.py
example/agent-grok/: math_utils.py
harvester_agents/: README_SAFE_EXEC.md  WARDEN_RECOMPILE_LOCK.md  __init__.py  claude_code_agent.py  code_interpreter_agent.py  gpt5_code_agent.py  handoffs.py  image_generation_agent.py  json_tools.py  openai_agent.py  openai_code_agent.py  openai_models.py  prompt_sanitizer.py  python_security.py  recompile_warden.sh  repl.py  runner.py  safe_exec.c  safe_fork.c  safe_open.c  sqlite_session.py  test_injection_protection.py  tools.py  usage.py
harvester_sdk/: __init__.py  output_manager.py  sdk.py
processors/: __init__.py  batch_submitter.py  galactic_federation.py  gemini_batch_submitter.py  multi_provider_parallel.py  parallel.py  parallel_monarchy.py  xai_async_processor.py  xai_deferred_submitter.py
providers/: __init__.py  anthropic_provider.py  base_provider.py  dalle3_provider.py  deepseek_provider.py  gemini_exp_provider.py  gemini_provider.py  genai_embeddings_provider.py  genai_functions_provider.py  genai_imagen_provider.py  genai_lyria_provider.py  genai_provider.py  genai_tts_provider.py  genai_veo3_provider.py  generic_provider.py  google_provider.py  gpt_image_provider.py  openai_image_provider.py  openai_provider.py  provider_factory.py  rqp_adapter.py  vertex_image_provider.py  vertex_provider.py  xai_async.py  xai_batch_provider.py  xai_functions.py  xai_image_provider.py  xai_provider.py  xai_provider_advanced.py  xai_streaming.py
templates/: MASTER-TEMPLATE.j2  cinematic_templates.json  construction_image_templates.json  digital_art_templates.json  fantasy_expanded_templates.json  fashion_image_templates.json  food_image_templates.json  json_order_templates.json  music_style_templates.json  nature_cosmic_templates.json  photography_templates.json  retro_nostalgia_templates.json  surreal_creative_templates.json  tech_dystopian_templates.json  tech_harmonious_templates.json  technology_image_templates.json  template_config.yaml  template_index.json  themed_templates.json  video_style_templates.json
templates/csv/: image_batch_multiapi.csv
templates/dalle3/: advanced_features.json  creative_styles.json
templates/embeddings/: content_similarity.json  rag_system.json  semantic_search.json
templates/gpt_image/: api_workflows.json  multi_turn_editing.json
templates/image/styles/: artistic_styles.json
templates/imagen/: batch_generation.json  genai_cosmic_duck.json
templates/jinja/business/: blog_post.j2  data_analysis.j2  email_draft.j2  meeting_summary.j2  product_description.j2  text_summary.j2
templates/jinja/code/: agnostic_purity.j2  architectural_review.j2  clean_code.j2  code_forge.j2  code_forge_exact.j2  comprehensive_docs.j2  document_improved.j2  documentation.j2  modernize_code.j2  performance_optimization.j2  test_generation.j2
templates/jinja/content/: seo_content.j2  translation.j2
templates/jinja/image/: basic_image_generation.j2  creative_art_generation.j2  enhanced_image_prompt.j2  product_photography.j2
templates/jinja/prompting/: prompt_enhancement.j2  prompt_improver_general.j2  prompt_improver_program.j2  quality_guardian.j2
templates/jinja/utils/: generate_schema.j2  knowledge_query.j2  pattern_extraction.j2
templates/lyria/: electronic_journey.json  jazz_lounge.json  world_fusion.json
templates/veo3/: animate_image.json  cinematic_scene.json
tests/: test_gpt5.py  test_gpt5_complete.py  test_gpt5_quick.py  test_gpt5_tokens.py  test_grok_file_tools.py
utils/: __init__.py  file_handlers.py  json_csv_converter.py  output_manager.py  output_paths.py  progress_tracker.py  rate_limiter.py
